// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange Input should render correctly 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 gAsOLC"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fkEaZX"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kJuWxj"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 kUDdtj Select__StyledSelectDropButton-sc-17idtfo-1 bsheiM"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lhHpuy"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 gErjJY"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 flNVco"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eymfXE Select__SelectTextInput-sc-17idtfo-0 jwiVPE"
                name="from_wallet"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="From"
                readOnly={true}
                size="medium"
                tabIndex="-1"
                type="text"
                value="GBP"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 dderd"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 gvGxfc"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
      <span
        className="StyledText-sc-1sadyjn-0 CVDRa"
        style={
          Object {
            "marginTop": 10,
          }
        }
      >
        Balance: 1090.00
      </span>
    </div>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bZqeeV"
    />
    <div
      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 flNVco"
    >
      <input
        autoComplete="off"
        className="StyledTextInput-sc-1x30a0s-0 ksHnCo"
        inputMode="decimal"
        name="from_value"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        placeholder="0"
        size="medium"
        step={0.01}
        style={
          Object {
            "textAlign": "right",
          }
        }
        type="number"
        value={0}
      />
    </div>
  </div>
</div>
`;

exports[`Exchange Input should render correctly if a validation error occour 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 gAsOLC"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fkEaZX"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kJuWxj"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 kUDdtj Select__StyledSelectDropButton-sc-17idtfo-1 bsheiM"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lhHpuy"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 gErjJY"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 flNVco"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eymfXE Select__SelectTextInput-sc-17idtfo-0 jwiVPE"
                name="from_wallet"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="From"
                readOnly={true}
                size="medium"
                tabIndex="-1"
                type="text"
                value="GBP"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 dderd"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 gvGxfc"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
      <span
        className="StyledText-sc-1sadyjn-0 epPaeH"
        style={
          Object {
            "marginTop": 10,
          }
        }
      >
        Is exceeding your balance
      </span>
    </div>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bZqeeV"
    />
    <div
      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 flNVco"
    >
      <input
        autoComplete="off"
        className="StyledTextInput-sc-1x30a0s-0 ksHnCo"
        inputMode="decimal"
        name="from_value"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        placeholder="0"
        size="medium"
        step={0.01}
        style={
          Object {
            "textAlign": "right",
          }
        }
        type="number"
        value={0}
      />
    </div>
  </div>
  <span
    className="StyledText-sc-1sadyjn-0 iFPVEX"
  >
    Should be greater that 0.5
  </span>
</div>
`;

exports[`Exchange Input should render correctly if exceeding 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 gAsOLC"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fkEaZX"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kJuWxj"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 kUDdtj Select__StyledSelectDropButton-sc-17idtfo-1 bsheiM"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lhHpuy"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 gErjJY"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 flNVco"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eymfXE Select__SelectTextInput-sc-17idtfo-0 jwiVPE"
                name="from_wallet"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="From"
                readOnly={true}
                size="medium"
                tabIndex="-1"
                type="text"
                value="GBP"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 dderd"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 gvGxfc"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
      <span
        className="StyledText-sc-1sadyjn-0 epPaeH"
        style={
          Object {
            "marginTop": 10,
          }
        }
      >
        Is exceeding your balance
      </span>
    </div>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bZqeeV"
    />
    <div
      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 flNVco"
    >
      <input
        autoComplete="off"
        className="StyledTextInput-sc-1x30a0s-0 ksHnCo"
        inputMode="decimal"
        name="from_value"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        placeholder="0"
        size="medium"
        step={0.01}
        style={
          Object {
            "textAlign": "right",
          }
        }
        type="number"
        value={0}
      />
    </div>
  </div>
</div>
`;
